# RLHF-Reward-Modeling

./: .cruft.json  .gitignore  .gitignore copy  README.md  eval_bench_mark.py  gemma_rm.py  mistral_rm.py  pyproject.toml  readme-zetteldev.md  serving_two_head.py  settings.ini
.zetteldev/: new_experiment.sh
armo-rm/: README.md  eval_commonsenseqa.py  eval_commonseqa.py  eval_examples.py  eval_piqa.py  nohup.out  pipeline.py  stage-1_prepare.py  stage-1_train.py  stage-2_prepare.py  stage-2_train.py
bradley-terry-rm/: README.md  gemma_2B_rm.py  gemma_rm.py  gemma_two_head.py  llama3_8B_rm.py  llama3_rm.py  mistral_7B_rm.py  mistral_rm.py
decision_tree/: README.md  collect_llm_preferences.py  get_embeddings.py
epiarmo/: epinet_mlp.py
math/: README.md
math-rm/: README.md  llama-3.1-orm.yaml  llama-3.1-prm.yaml  orm_evaluate.py  prm_evaluate.py  scalar_orm_train.py
murdo/: epinet_mlp.py
murdo/useful_code/: eval_reward_bench_bt.py
nbs/: _quarto.yml  sidebar.yml
nbs/documentation/: index.ipynb
nbs/experiments/: Integrating Epinet into Armo Regression.ipynb  _template.ipynb
odin/: README.md  gemma_two_head.py  serving_two_head.py
pair-pm/: README.md  gemma-2b-it.yaml  gemma-9b-it.yaml  llama3-8b-it.yaml  prepare_model.py  process_pair_data.py
pair-pm/RRM/: rrm_augmentation.py
pair-pm/SSRM/: conf_threshold.py  pseudo_label.py
paper/: _quarto.yml  index.qmd
paper/_extensions/dfolio/ieee/: _extension.yml  ieee-template.tex  ieee-with-url.csl  styles.scss
paper/_extensions/dfolio/ieee/_extensions/quarto-ext/latex-environment/: _extension.yml  latex-environment.lua
paper/_extensions/dfolio/ieee/partials/: affiliation.tex  after-body.html  after-body.tex  author.html  author.tex  before-bib.tex  before-body.tex  doc-class.tex  ieee-template.html  mathjax.html  title-block.html  title-metadata.html  title.tex
paper/site_libs/bootstrap/: bootstrap.min.css
useful_code/: eval_reward_bench_pm.py
www/: robots.txt
